make sure that header doesn't overlap anchor text by pushing the anchor 100px above the actual paragraph text

--- a/ap2013.css
+++ b/ap2013.css
@@ -32,6 +32,9 @@ body {
 	visibility: hidden;
 
 }
+
+#content a[name] { position: relative; top: -100px;}
+
 #content { 
 	background: #F8F6F5;
 	box-shadow: 0 0 15px #ddd;
